--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'com.google.apis:google-api-services-customsearch:v1-rev60-1.23.0'
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.jakewharton:butterknife:8.8.1'
 }
